# chromatin

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  roadmap.md  sequence.txt  todo.md
alembic/: env.py
api/: main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0dea406e2a94_add_project_sequence_user.py  48677e88c9a5_add_hybrid_sequence_storage.py  b7a9b22443b6_add_structure_prediction.py  d5aefab4ea84_add_hybrid_sequence_storage.py  e28194977b2b_add_jobs_table.py
api/common/: models.py  routes.py  schemas.py  service.py
api/core/: celery_app.py  config.py  consts.py  exceptions.py  schemas.py  security.py  storage.py
api/jobs/: enums.py  models.py  routes.py  schemas.py  service.py  tasks.py
api/projects/: schemas.py  service.py
api/sequences/: __init__.py  consts.py  fasta_parser.py  models.py  routes.py  schemas.py  service.py  utils.py
api/tests/: conftest.py
api/tests/common/routes/: test_auth_routes.py
api/tests/common/service/: test_auth_service.py
api/tests/jobs/: test_alignment.py  test_job_routes.py  test_job_service.py
api/tests/projects/: test_project_routes.py  test_project_service.py
api/tests/sequences/: test_fasta_parser.py  test_fasta_upload_service.py  test_sequence_routes.py  test_sequence_service.py  test_utils.py
client/: index.html  package-lock.json  package.json  vite.config.ts
common/: enums.py  models.py  routes.py  schemas.py
core/: config.py  database.py  deps.py
docker/: postgres-init.sql
projects/: models.py  routes.py  schemas.py  service.py
(+42 files in other folders)
